--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "core-js": "^3.6.4",
     "express": "^4.17.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -30,8 +33,10 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-react": "^7.18.0",
+    "file-loader": "^5.0.2",
     "jest": "^25.1.0",
     "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
