--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "RocketInsurance",
   "version": "0.1.0",
-  "description": "",
+  "description": "In case of asteroid",
   "repository": {
     "type": "git",
     "url": "https://github.com/ronghuang0/RocketInsurance"
@@ -32,7 +32,9 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.0.2",
     "jest": "^25.1.0",
     "style-loader": "^1.1.3",
